Add NaN value statistics block

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4             0             0              40           Cuba  <=50K  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +248,66 @@
     "    uniques = sorted(df[c].unique())\n",
     "    print(f'{c:<17}|{len(uniques):^10}{\"|\":<5}{str(uniques)}')\n",
     "    print('----------------------------------------------------------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before Replacement            After Replacement\n",
+      "Age                 0         Age                 False\n",
+      "Work_Class          0         Work_Class          True\n",
+      "Final_Weight        0         Final_Weight        False\n",
+      "Education           0         Education           False\n",
+      "Education-Number    0         Education-Number    False\n",
+      "Marital_Status      0         Marital_Status      False\n",
+      "Occupation          0         Occupation          True\n",
+      "Relationship        0         Relationship        False\n",
+      "Race                0         Race                False\n",
+      "Sex                 0         Sex                 False\n",
+      "Capital_Gain        0         Capital_Gain        False\n",
+      "Capital_Loss        0         Capital_Loss        False\n",
+      "Hours-Per-Week      0         Hours-Per-Week      False\n",
+      "Native_Country      0         Native_Country      True\n",
+      "Income              0         Income              False\n",
+      "\n",
+      "==========================================================\n",
+      "\n",
+      "NaN value percentage\n",
+      "Occupation          5.66%\n",
+      "Work_Class          5.64%\n",
+      "Native_Country      1.79%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for nan values\n",
+    "\n",
+    "# replace ? with nan\n",
+    "df2 = df.replace('?', np.nan)\n",
+    "\n",
+    "print(f'{\"Before Replacement\":<30}{\"After Replacement\"}')\n",
+    "for c in df.columns:\n",
+    "    print(f'{c:<20}{bool(df[c].hasnans):<10}{c:<20}{df2[c].hasnans}')\n",
+    "print('\\n==========================================================\\n')\n",
+    "\n",
+    "# count nan values for columns\n",
+    "print('NaN value percentage')\n",
+    "nan_count = sorted(\n",
+    "    [(c,df2[c].isna().sum()) for c in df2.columns if df2[c].isna().sum()>0],\n",
+    "    key=lambda x: x[1],\n",
+    "    reverse=True\n",
+    "    )\n",
+    "for c,v in nan_count:\n",
+    "    print(f'{c:<20}{v/df2.shape[0]*100:.2f}%')\n",
+    "\n",
+    "\n",
+    "df = df2"
    ]
   },
   {
