--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,31 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import block\n",
     "\n",
+    "# utils\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "# preprocessing\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# data split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# models\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.cluster import KMeans\n",
+    "# post prediction\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, silhouette_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -158,34 +163,163 @@
        "      <td>Cuba</td>\n",
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>257302</td>\n",
+       "      <td>Assoc-acdm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>154374</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>58</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>151910</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Widowed</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>201490</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>52</td>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>287927</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>32561 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Age        Work_Class  Final_Weight  Education  Education-Number   \n",
-       "0   39         State-gov         77516  Bachelors                13  \\\n",
-       "1   50  Self-emp-not-inc         83311  Bachelors                13   \n",
-       "2   38           Private        215646    HS-grad                 9   \n",
-       "3   53           Private        234721       11th                 7   \n",
-       "4   28           Private        338409  Bachelors                13   \n",
+       "       Age        Work_Class  Final_Weight   Education  Education-Number   \n",
+       "0       39         State-gov         77516   Bachelors                13  \\\n",
+       "1       50  Self-emp-not-inc         83311   Bachelors                13   \n",
+       "2       38           Private        215646     HS-grad                 9   \n",
+       "3       53           Private        234721        11th                 7   \n",
+       "4       28           Private        338409   Bachelors                13   \n",
+       "...    ...               ...           ...         ...               ...   \n",
+       "32556   27           Private        257302  Assoc-acdm                12   \n",
+       "32557   40           Private        154374     HS-grad                 9   \n",
+       "32558   58           Private        151910     HS-grad                 9   \n",
+       "32559   22           Private        201490     HS-grad                 9   \n",
+       "32560   52      Self-emp-inc        287927     HS-grad                 9   \n",
        "\n",
-       "       Marital_Status         Occupation   Relationship   Race     Sex   \n",
-       "0       Never-married       Adm-clerical  Not-in-family  White    Male  \\\n",
-       "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
-       "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
-       "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
-       "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+       "           Marital_Status         Occupation   Relationship   Race     Sex   \n",
+       "0           Never-married       Adm-clerical  Not-in-family  White    Male  \\\n",
+       "1      Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+       "2                Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+       "3      Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+       "4      Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+       "...                   ...                ...            ...    ...     ...   \n",
+       "32556  Married-civ-spouse       Tech-support           Wife  White  Female   \n",
+       "32557  Married-civ-spouse  Machine-op-inspct        Husband  White    Male   \n",
+       "32558             Widowed       Adm-clerical      Unmarried  White  Female   \n",
+       "32559       Never-married       Adm-clerical      Own-child  White    Male   \n",
+       "32560  Married-civ-spouse    Exec-managerial           Wife  White  Female   \n",
        "\n",
-       "   Capital_Gain  Capital_Loss  Hours-Per-Week Native_Country Income  \n",
-       "0          2174             0              40  United-States  <=50K  \n",
-       "1             0             0              13  United-States  <=50K  \n",
-       "2             0             0              40  United-States  <=50K  \n",
-       "3             0             0              40  United-States  <=50K  \n",
-       "4             0             0              40           Cuba  <=50K  "
+       "       Capital_Gain  Capital_Loss  Hours-Per-Week Native_Country Income  \n",
+       "0              2174             0              40  United-States  <=50K  \n",
+       "1                 0             0              13  United-States  <=50K  \n",
+       "2                 0             0              40  United-States  <=50K  \n",
+       "3                 0             0              40  United-States  <=50K  \n",
+       "4                 0             0              40           Cuba  <=50K  \n",
+       "...             ...           ...             ...            ...    ...  \n",
+       "32556             0             0              38  United-States  <=50K  \n",
+       "32557             0             0              40  United-States   >50K  \n",
+       "32558             0             0              40  United-States  <=50K  \n",
+       "32559             0             0              20  United-States  <=50K  \n",
+       "32560         15024             0              40  United-States   >50K  \n",
+       "\n",
+       "[32561 rows x 15 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +327,12 @@
    "source": [
     "# load raw train data\n",
     "df = pd.read_csv('data/train.csv')\n",
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +442,159 @@
     "\n",
     "\n",
     "df = df2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Data cleaning and NaN handling"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 1: Dropping rows with a NaN value in any column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 30162 entries, 0 to 32560\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   Age               30162 non-null  int64 \n",
+      " 1   Work_Class        30162 non-null  object\n",
+      " 2   Final_Weight      30162 non-null  int64 \n",
+      " 3   Education         30162 non-null  object\n",
+      " 4   Education-Number  30162 non-null  int64 \n",
+      " 5   Marital_Status    30162 non-null  object\n",
+      " 6   Occupation        30162 non-null  object\n",
+      " 7   Relationship      30162 non-null  object\n",
+      " 8   Race              30162 non-null  object\n",
+      " 9   Sex               30162 non-null  object\n",
+      " 10  Capital_Gain      30162 non-null  int64 \n",
+      " 11  Capital_Loss      30162 non-null  int64 \n",
+      " 12  Hours-Per-Week    30162 non-null  int64 \n",
+      " 13  Native_Country    30162 non-null  object\n",
+      " 14  Income            30162 non-null  object\n",
+      "dtypes: int64(6), object(9)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_dropnan = df.copy()\n",
+    "df_dropnan = df_dropnan.dropna(how='any', axis=0)\n",
+    "df_dropnan.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 2: Replace with mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   Age               32561 non-null  int64 \n",
+      " 1   Work_Class        32561 non-null  object\n",
+      " 2   Final_Weight      32561 non-null  int64 \n",
+      " 3   Education         32561 non-null  object\n",
+      " 4   Education-Number  32561 non-null  int64 \n",
+      " 5   Marital_Status    32561 non-null  object\n",
+      " 6   Occupation        32561 non-null  object\n",
+      " 7   Relationship      32561 non-null  object\n",
+      " 8   Race              32561 non-null  object\n",
+      " 9   Sex               32561 non-null  object\n",
+      " 10  Capital_Gain      32561 non-null  int64 \n",
+      " 11  Capital_Loss      32561 non-null  int64 \n",
+      " 12  Hours-Per-Week    32561 non-null  int64 \n",
+      " 13  Native_Country    32561 non-null  object\n",
+      " 14  Income            32561 non-null  object\n",
+      "dtypes: int64(6), object(9)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_repnan_mode = df.copy()\n",
+    "for c in df_repnan_mode.columns:\n",
+    "    df_repnan_mode[c] = df_repnan_mode[c].fillna(df_repnan_mode[c].mode()[0])\n",
+    "df_repnan_mode.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 3: Replace using classification analysis\n",
+    "\n",
+    "There are 3 features with NaN values. `Work_Class`, `Occupation`, `Native_Country`. We will predict features with missing values using `KNN` classification. This is to fill the missing values with the values from records that are similar to the records with missing values. In other words, we will replace missing values with the ones from the same class. We will use complete records as training data and the rest as test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<32561x104 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 293049 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_repnan_ccn = df.copy()\n",
+    "\n",
+    "# encoding\n",
+    "# feature extraction\n",
+    "# dimension reduction\n",
+    "# split\n",
+    "# train\n",
+    "# predict\n",
+    "# modify original dataset\n",
+    "\n",
+    "encoder = OneHotEncoder()\n",
+    "scaler = StandardScaler()\n",
+    "pca = PCA(n_components='mle')\n",
+    "\n",
+    "\n",
+    "obj_cols = df_repnan_ccn.dtypes=='object'\n",
+    "obj_cols = obj_cols[obj_cols].index\n"
    ]
   },
   {
